Update title in index.html

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>CARF.AI - Gestão de Competências e Produtividade</title>
+    <title>CGIPC - Gestão Inteligente de Pessoas e Competências/title>
     <meta name="description" content="Sistema institucional de gestão de competências e aumento de produtividade do Conselho Administrativo de Recursos Fiscais" />
     <meta name="author" content="CARF" />
 
