--- a/index.html
+++ b/index.html
@@ -1,20 +1,26 @@
 <!doctype html>
-<html lang="en">
+<html lang="pt-BR">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>CGIPC - Gestão Inteligente de Pessoas e Competências/title>
-    <meta name="description" content="Sistema institucional de gestão de competências e aumento de produtividade do Conselho Administrativo de Recursos Fiscais" />
+    <title>GIPC - Gestão Inteligente de Pessoas e Competências</title>
+    <meta
+      name="description"
+      content="Sistema institucional de gestão de competências e aumento de produtividade do Conselho Administrativo de Recursos Fiscais"
+    />
     <meta name="author" content="CARF" />
 
     <meta property="og:title" content="CARF.AI - Gestão de Competências e Produtividade" />
-    <meta property="og:description" content="Sistema institucional de gestão de competências e aumento de produtividade do Conselho Administrativo de Recursos Fiscais" />
+    <meta
+      property="og:description"
+      content="Sistema institucional de gestão de competências e aumento de produtividade do Conselho Administrativo de Recursos Fiscais"
+    />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="/public/og-image.png" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:site" content="@carf_gov" />
+    <meta name="twitter:image" content="/public/og-image.png" />
   </head>
 
   <body>
