--- a/index.html
+++ b/index.html
@@ -1,26 +1,34 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="pt-BR">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
     <title>GIPC - Gestão Inteligente de Pessoas e Competências</title>
     <meta
       name="description"
       content="Sistema institucional de gestão de competências e aumento de produtividade do Conselho Administrativo de Recursos Fiscais"
     />
-    <meta name="author" content="CARF" />
+    <meta name="author" content="GIPC" />
 
-    <meta property="og:title" content="CARF.AI - Gestão de Competências e Produtividade" />
+    <!-- 🔹 Open Graph (para compartilhamento no WhatsApp, LinkedIn etc.) -->
+    <meta
+      property="og:title"
+      content="GIPC - Gestão Inteligente de Pessoas e Competências"
+    />
     <meta
       property="og:description"
       content="Sistema institucional de gestão de competências e aumento de produtividade do Conselho Administrativo de Recursos Fiscais"
     />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="/public/og-image.png" />
+    <!-- ⚠️ Troque por uma imagem sua, ex: /src/assets/logo.png -->
+    <meta property="og:image" content="/src/assets/mulher-removebg-preview.png" />
 
+    <!-- 🔹 Twitter Card (para compartilhamento no Twitter/X) -->
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@carf_gov" />
-    <meta name="twitter:image" content="/public/og-image.png" />
+    <!-- Opcional: coloque seu próprio @ se quiser -->
+    <meta name="twitter:site" content="@GIPC" />
+    <meta name="twitter:image" content="/src/assets/mulher-removebg-preview.png" />
   </head>
 
   <body>
